--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,6 +5,14 @@ stages:
       - src/get_data.py
       - src/load_data.py
       - data_given/BankNote_Authentication.csv
-
     outs:
       - data/raw/BankNote_Authentication.csv
+
+  split_data:
+     cmd: python src/split_data.py --config=params.yaml
+     deps:
+       - src/split_data.py
+       - data/raw/BankNote_Authentication.csv
+     outs:
+       - data/processed/train_BankNote_Authentication.csv
+       - data/processed/test_BankNote_Authentication.csv
