--- a/params.yaml
+++ b/params.yaml
@@ -17,8 +17,10 @@ split_data:
 estimators:
   RandomForestClassifier:
     params:
-      max_depth: 8
-      n_estimators: 100
+      #max_depth: 8
+      #n_estimators: 100
+      max_depth: 4
+      n_estimators: 50
 model_dir: saved_models
 
 reports:
